--- a/ralan_web/src/components/Background/Background.module.scss
+++ b/ralan_web/src/components/Background/Background.module.scss
@@ -1,13 +1,8 @@
-.backgroundWrapper{
+.fixedBackground {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100vh;
-  background-color: #1A2344;
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center;
-  // padding: 0 178px;
+  z-index: -1;
 }
