--- a/ralan_web/src/components/Pages/MainPage/OurOffersSlide/OurOffersSlide.module.scss
+++ b/ralan_web/src/components/Pages/MainPage/OurOffersSlide/OurOffersSlide.module.scss
@@ -28,4 +28,12 @@
     flex-wrap: wrap;
     gap: 20px;
   }
+
+  .sliderWrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 180px;;
+  }
 }
