--- a/ralan_web/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/ElseOffersItem.module.scss
+++ b/ralan_web/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/ElseOffersItem.module.scss
@@ -36,7 +36,7 @@
 				min-height: 96px;
 				align-items: center;
 				font-family: var(--tactic-sans-medium), sans-serif;
-				font-weight: normal;
+				font-weight: 500;
 				font-size: 40px;
 				color: #A8DADC;
 			}
