--- a/src/components/Pages/MainPage/OurOffersSlide/OfferCarousel/OfferCarousel.module.scss
+++ b/src/components/Pages/MainPage/OurOffersSlide/OfferCarousel/OfferCarousel.module.scss
@@ -46,12 +46,16 @@
   transform: scale(0.925) translateX(100px);
   filter: blur(1px);
   z-index: 0;
+  pointer-events: none;
+  cursor: default;
 }
 
 .slide.next {
   opacity: 0.7;
   transform: scale(0.925) translateX(-100px);
   z-index: 0;
+  pointer-events: none;
+  cursor: default;
 }
 
 .slide.nonVisible {
