--- a/src/components/Pages/MainPage/AboutUsSlide/AboutUsSlide.module.scss
+++ b/src/components/Pages/MainPage/AboutUsSlide/AboutUsSlide.module.scss
@@ -29,14 +29,42 @@
     height: 856px;
     border-radius: 60px;
     background-color: #fffff0;
-
-    .image{
+      
+    .image {
       object-fit: cover;
       object-position: -644px -364px;
-      transform-origin: center;
+      transform-origin: top left;
       max-width: unset;
       max-height: unset;
       pointer-events: none;
+    }
+  }
+}
+
+@media (max-width: 1366px) and (max-height: 820px) {
+  .aboutUsSlideWrapper {
+    padding: 21px 120px 0 120px;
+    gap: 14px;
+
+    .textInfoBlock {
+      width: 517px;
+      padding: 40px 21px;
+      border-radius: 40px;
+      gap: 13px;
+
+      .contentRow{
+        min-height: 111px;
+      }
+    }
+
+    .imageBlock{
+      width: 517px;
+      height: 573px;
+      border-radius: 40px;
+
+      .image{
+        transform: scale(0.67);
+      }
     }
   }
 }
