--- a/src/components/Pages/MainPage/FirstSlide/BottomContent/BottomContent.module.scss
+++ b/src/components/Pages/MainPage/FirstSlide/BottomContent/BottomContent.module.scss
@@ -10,3 +10,9 @@
     color: #fffff0;
   }
 }
+
+@media (max-width: 1366px) and (max-height: 820px) {
+  .bottomContent {
+    .buttonText { font-size: 14px; }
+  }
+}
