--- a/src/components/Pages/MainPage/TeamRepresentatives/TeamRepresentatives.module.scss
+++ b/src/components/Pages/MainPage/TeamRepresentatives/TeamRepresentatives.module.scss
@@ -29,3 +29,12 @@
     gap: 20px;
   }
 }
+
+@media (max-width: 1366px) and (max-height: 820px) {
+  .teamRepresentativesWrapper {
+    margin-top: 120px;
+
+    .titleLine .titleText { font-size: 56px; }
+    .slideLine { gap: 16px; }
+  }
+}
