--- a/src/components/Pages/MainPage/YouWillFindSlide/YouWillFindInfoBlock/YouWillFindInfoBlock.module.scss
+++ b/src/components/Pages/MainPage/YouWillFindSlide/YouWillFindInfoBlock/YouWillFindInfoBlock.module.scss
@@ -36,3 +36,23 @@
     }
   }
 }
+
+@media (max-width: 1366px) and (max-height: 820px) {
+  .youWillFindInfoBlockWrapper{
+    margin: 20px * 0.67 0;
+    padding: 32px * 0.67;
+    height: 560px * 0.67;
+    border-radius: 60px * 0.67;
+    gap: 20px * 0.67;
+
+    .textBlock{
+      width: 781px * 0.67;
+      gap: 20px * 0.67;
+    }
+  
+    .imageBlock{
+      width: 380px * 0.67;
+      border-radius: 40px * 0.67;
+    }
+  }
+}
