--- a/src/components/Pages/MainPage/YouWillFindSlide/YouWillFindSlide.module.scss
+++ b/src/components/Pages/MainPage/YouWillFindSlide/YouWillFindSlide.module.scss
@@ -26,3 +26,19 @@
     width: 1246px;
   }
 }
+
+@media (max-width: 1366px) and (max-height: 820px) {
+  .youWillFindSlideWrapper {
+    margin-top: 180px * 0.67;
+    gap: 32px * 0.67;
+
+    .titleLine {
+      width: 1246px * 0.67;
+      height: 84px * 0.67;
+
+      .titleText { font-size: 70px * 0.67; }
+    }
+
+    .slideLine { width: 1246px * 0.67; }
+  }
+}
