--- a/src/components/Common/PersonBlock/ClosedPersonBlock/ClosedPersonBlock.module.scss
+++ b/src/components/Common/PersonBlock/ClosedPersonBlock/ClosedPersonBlock.module.scss
@@ -14,7 +14,7 @@
 
     .image{
       object-fit: cover;
-      transform-origin: center;
+      transform-origin: top left;
       max-width: unset;
       max-height: unset;
       pointer-events: none;
@@ -32,5 +32,26 @@
     text-align: center;
     font-size: 18px;
     color: #A8DADC;
+  }
+}
+
+@media (max-width: 1366px) and (max-height: 820px) {
+  .closedPersonBlock{
+    width: 297px * 0.67;
+    gap: 20px * 0.67;
+  
+    .imageBlock{
+      height: 272px * 0.67;
+      border-radius: 40px * 0.67;
+  
+      .image{
+        transform: scale(0.67);
+      }
+    }
+  
+    .nameLine{
+      height: 126px * 0.67;
+      font-size: 18px * 0.67;
+    }
   }
 }
