--- a/src/components/Pages/MainPage/CallToActionSlide/CallToActionSlide.module.scss
+++ b/src/components/Pages/MainPage/CallToActionSlide/CallToActionSlide.module.scss
@@ -53,23 +53,34 @@
 
 /* Laptop adaptations */
 @media (max-width: 1366px) {
-  .callToActionSlideWrapper {
-    margin-top: 120px;
-    margin-bottom: 120px;
-
-    .slideLine {
-      .callToActionBlock {
-        width: 1040px;
-        height: 300px;
-        padding: 24px 16px;
-
-        .blockLine {
-          width: 720px;
-
-          .titleText { font-size: 22px; }
-          .mainText { width: 560px; font-size: 18px; }
-        }
-      }
-    }
-  }
+  .callToActionSlideWrapper{
+		margin-top: 180px * 0.67;
+		margin-bottom: 180px * 0.67;
+	
+		.slideLine{
+	
+			.callToActionBlock{
+				width: 1247px * 0.67;
+				height: 325px * 0.67;
+				padding: 32px * 0.67 18px * 0.67;
+				box-shadow: 0px 4px * 0.67 18px * 0.67 rgba(69, 123, 157, 0.25);
+				border-radius: 40px * 0.67;
+				gap: 20px * 0.67;
+	
+				.blockLine{
+					width: 807px * 0.67;
+					gap: 13px * 0.67;
+	
+					.titleText{
+						font-size: 26px * 0.67;
+					}
+	
+					.mainText{
+						width: 605px * 0.67;
+						font-size: 20px * 0.67;
+					}
+				}
+			}
+		}
+	}
 }
