--- a/src/components/Pages/MainPage/OurOffersSlide/OfferCarousel/CarouselSlider/CarouselSlider.module.scss
+++ b/src/components/Pages/MainPage/OurOffersSlide/OfferCarousel/CarouselSlider/CarouselSlider.module.scss
@@ -61,3 +61,32 @@
     justify-content: center;
   }
 }
+
+@media (max-width: 1366px) and (max-height: 820px) {
+  .slideWrapper {
+    padding: 32px * 0.67;
+    gap: 20px * 0.67;
+  
+    .slideInfoLine {
+      width: 325px * 0.67;
+      height: 110px * 0.67;
+  
+      .discipline,
+      .dateAndTime {
+        font-size: 18px * 0.67;
+      }
+  
+      .offerName {
+        font-size: 26px * 0.67;
+      }
+  
+      .price {
+        font-size: 48px * 0.67;
+      }
+  
+      .ridingLevel {
+        font-size: 26px * 0.67;
+      }
+    }
+  }
+}
