--- a/src/components/Pages/MainPage/OurOffersSlide/OurOffersSlide.module.scss
+++ b/src/components/Pages/MainPage/OurOffersSlide/OurOffersSlide.module.scss
@@ -44,21 +44,24 @@
 }
 
 @media (max-width: 1366px) and (max-height: 820px) {
-  .ourOffersWrapper {
-    margin-top: 120px;
-
-    .titleLine .titleText { font-size: 56px; }
-    .slideLine { gap: 16px; }
-    .elseOffers { gap: 16px; }
+  .ourOffersWrapper{
+    margin-top: 180px * 0.67;
+    gap: 20px * 0.67;
+  
+    .titleLine{
+      height: 84px * 0.67;
+  
+      .titleText{
+        font-size: 70px * 0.67;
+      }
+    }
+  
+    .slideLine{
+      gap: 20px * 0.67;
+    }
+  
+    .elseOffers{
+      gap: 20px * 0.67;
+    }
   }
 }
-
-// @media (max-width: 1366px) {
-//   .ourOffersWrapper {
-//     margin-top: 120px;
-
-//     .titleLine .titleText { font-size: 56px; }
-//     .slideLine { gap: 16px; }
-//     .elseOffers { gap: 16px; }
-//   }
-// }
