--- a/src/components/Pages/MainPage/TeamRepresentatives/TeamRepresentatives.module.scss
+++ b/src/components/Pages/MainPage/TeamRepresentatives/TeamRepresentatives.module.scss
@@ -31,10 +31,20 @@
 }
 
 @media (max-width: 1366px) and (max-height: 820px) {
-  .teamRepresentativesWrapper {
-    margin-top: 120px;
-
-    .titleLine .titleText { font-size: 56px; }
-    .slideLine { gap: 16px; }
+  .teamRepresentativesWrapper{
+    margin-top: 180px * 0.67;
+    gap: 20px * 0.67;
+  
+    .titleLine{
+      height: 84px * 0.67;
+  
+      .titleText{
+        font-size: 70px * 0.67;
+      }
+    }
+  
+    .slideLine{
+      gap: 20px * 0.67;
+    }
   }
 }
