--- a/src/components/Background/Background.module.scss
+++ b/src/components/Background/Background.module.scss
@@ -3,6 +3,34 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100vh; /*Использовать vh, чтобы покрыть всю высоту экрана*/
   z-index: -1;
+  overflow: hidden; /* Обрезаем все, что выходит за границы */
+  min-height: 100%;
+  background: 
+    repeating-radial-gradient(#000 0 0.0001%,#fff 0 0.0002%) 
+    60% 60%/3000px 3000px,
+    repeating-conic-gradient(#000 0 0.0001%,#fff 0 0.0002%) 
+    40% 40%/3000px 3000px;
+  animation: b 5s infinite alternate;
+  background-blend-mode: difference;
+    
+  
+  /* Добавляем псевдоэлемент для эффекта помех */
+  // &::before { /* Используем &::, чтобы связать псевдоэлемент с .fixedBackground */
+  //   content: "";
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Cdefs%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='3' stitchTiles='stitch'/%3E%3CfeColorMatrix type='matrix' values='1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0.2 0'/%3E%3C/filter%3E%3C/defs%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+  //   opacity: 0.15; /* Настраиваем прозрачность помех */
+  //   pointer-events: none; /* Чтобы помехи не мешали кликам */
+  // }
 }
+
+@keyframes b{
+  100% {background-position: 50% 0, 60% 50%}
+}
+
