--- a/src/components/Background/Background.module.scss
+++ b/src/components/Background/Background.module.scss
@@ -3,55 +3,15 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh; /*Использовать vh, чтобы покрыть всю высоту экрана*/
+  height: 100vh;
   z-index: -1;
-  overflow: hidden; /* Обрезаем все, что выходит за границы */
-  min-height: 100%;
-  background: 
-    repeating-radial-gradient(#000 0 0.0001%,#fff 0 0.0002%) 
-    60% 60%/3000px 3000px,
-    repeating-conic-gradient(#000 0 0.0001%,#fff 0 0.0002%) 
-    40% 40%/3000px 3000px;
-  animation: b 5s infinite alternate;
-  background-blend-mode: difference;
-
-  .noizeBackground{
-    width: 100%;
-    height: 100%;
-  }
-  
+  overflow: hidden;
+  background-color: #1A2344;
 }
 
-@keyframes b{
-  100% {background-position: 50% 0, 60% 50%}
+.noizeBackground {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  z-index: 0;
 }
-
-// .fixedBackground {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100vh;
-//   z-index: -1;
-//   overflow: hidden;
-//   min-height: 100%;
-//   background-color: #1A2344;
-
-//   .noizeBackground{
-//     width: 100%;
-//     height: 100%;
-//     background: 
-//       repeating-radial-gradient(#000 0 0.0001%,#fff 0 0.0002%) 
-//       60% 60%/3000px 3000px,
-//       repeating-conic-gradient(#000 0 0.0001%,#fff 0 0.0002%) 
-//       40% 40%/3000px 3000px;
-//     animation: b 5s infinite alternate;
-//     background-blend-mode: difference;
-//   }
-// }
-
-// @keyframes b{
-//   100% {background-position: 50% 0, 60% 50%}
-// }
-
-
