--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -17,13 +17,13 @@
     .backgroundTop{
       width: 100%;
       height: 50%;
-      background: linear-gradient(to bottom, #1A2344 0%, #1D3557 100%);
+      background: linear-gradient(to bottom, rgba(26, 35, 68, 0.0) 0%, rgba(29, 53, 87, 1) 100%);
     }
 
     .backgroundBottom{
       width: 100%;
       height: 50%;
-      background: linear-gradient(to top, #1A2344 0%, #1D3557 100%);
+      background: linear-gradient(to top, rgba(26, 35, 68, 0.0) 0%, rgba(29, 53, 87, 1) 100%);
     }
   }
 
