--- a/src/components/Pages/MainPage/FirstSlide/FrameContent/FrameContent.module.scss
+++ b/src/components/Pages/MainPage/FirstSlide/FrameContent/FrameContent.module.scss
@@ -10,8 +10,8 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    width: 455px;
-    height: 152px;
+    width: 341px;
+    height: 114px;
     background-color: #FFFFF0;
     border-radius: 100px;
     border: 2px solid #FFFFF0;
@@ -56,9 +56,9 @@
     border-radius: 67px;
 
     .topElement {
-      width: 305px;
-      height: 102px;
-      top: -60px;
+      width: 341px * 0.67;
+      height: 114px * 0.67;
+      top: -40px;
     }
 
     .bottomElement {
