--- a/src/components/Pages/MainPage/FirstSlide/FrameContent/FrameContent.module.scss
+++ b/src/components/Pages/MainPage/FirstSlide/FrameContent/FrameContent.module.scss
@@ -36,7 +36,7 @@
   }
 
   .topElement {
-    top: -78px;
+    top: -57px;
   }
 
   .bottomElement {
@@ -58,7 +58,7 @@
     .topElement {
       width: 341px * 0.67;
       height: 114px * 0.67;
-      top: -40px;
+      top: -57px * 0.67;
     }
 
     .bottomElement {
