--- a/src/components/Pages/MainPage/FirstSlide/FirstSlide.module.scss
+++ b/src/components/Pages/MainPage/FirstSlide/FirstSlide.module.scss
@@ -11,7 +11,6 @@
     justify-content: center;
     z-index: 100;
     color: white;
-    background-color: rgba(0, 0, 0, 0.5);
     padding: 108px 178px 205px 178px;
   }
   
@@ -20,8 +19,9 @@
     height: 100vh;
     position: relative;
     overflow: hidden;
-
-    .image{
+    filter: brightness(0.5); 
+    
+    .image {
       object-fit: cover;
       object-position: center;
       width: 100%;
