add first slide animation

--- a/src/components/Pages/MainPage/FirstSlide/BottomContent/BottomContent.module.scss
+++ b/src/components/Pages/MainPage/FirstSlide/BottomContent/BottomContent.module.scss
@@ -6,6 +6,7 @@
   .buttonText{
     font-family: var(--tactic-sans-regular), sans-serif;
     font-weight: normal;
+    text-wrap: nowrap;
     font-size: 16px;
     color: #fffff0;
   }
