--- a/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/ElseOffersItem.module.scss
+++ b/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/ElseOffersItem.module.scss
@@ -53,8 +53,8 @@
 				height: 65px; 
 				display: inline-block;
 				background-color: #a8dadc;
-				-webkit-mask-image: url('../../../../../../assets/swg/arrow.svg');
-				mask-image: url('../../../../../../assets/swg/arrow.svg');
+				-webkit-mask-image: url('../../../../../../assets/svg/arrow.svg');
+				mask-image: url('../../../../../../assets/svg/arrow.svg');
 				mask-repeat: no-repeat;
 				mask-size: contain;
 				mask-position: center;
