--- a/src/components/Pages/MainPage/YouWillFindSlide/YouWillFindInfoTitle/YouWillFindInfoTitle.module.scss
+++ b/src/components/Pages/MainPage/YouWillFindSlide/YouWillFindInfoTitle/YouWillFindInfoTitle.module.scss
@@ -49,8 +49,8 @@
       height: 99px; 
       display: inline-block;
       background-color: #a8dadc;
-      -webkit-mask-image: url('../../../../../../assets/swg/arrow.svg');
-      mask-image: url('../../../../../../assets/swg/arrow.svg');
+      -webkit-mask-image: url('../../../../../../assets/svg/arrow.svg');
+      mask-image: url('../../../../../../assets/svg/arrow.svg');
       mask-repeat: no-repeat;
       mask-size: contain;
       mask-position: center;
