--- a/src/components/Common/NavigationMenu/NavigationModal/NavigationModal.module.scss
+++ b/src/components/Common/NavigationMenu/NavigationModal/NavigationModal.module.scss
@@ -8,10 +8,83 @@
 	height: 456px;
 	border: 4px solid #FFFFF0;
   border-radius: 40px;
+	padding: 16px 0;
+	gap: 10px;
+
+	.content{
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		height: 100%;
+		padding: 16px 0;
+		gap: 10px;
+
+		.modalRow{
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 100%;
+			height: 63px;
+
+			.text{
+				color: #FFFFF0;
+				font-family: var(--tactic-sans-medium), sans-serif;
+				font-weight: 500;
+				text-align: center;
+				font-size: 20px;
+				cursor: pointer;
+			}
+		}
+	}
+
+	.topElement{
+    position: absolute;
+    left: 14px;
+		top: -50px;
+    width: 296px;
+    height: 100px;
+    background-color: #FFFFF0;
+    border-radius: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+		padding: 0 24px;
+
+		.logoImage {
+			width: 100%;
+			height: auto;
+		}
+  }
+	
 }
 
 @media (max-width: 1366px) and (max-height: 820px) {
-  .navigationMenuClosedWrapper {
+  .navigationModalWrapper {
     top: 115px * 0.67;
+		width: 336px * 0.67;
+		height: 456px * 0.67;
+		border-radius: 40px * 0.67;
+
+		.content{
+			padding: 16px * 0.67 0;
+			gap: 10px * 0.67;
+
+			.modalRow{
+				height: 63px * 0.67;
+				
+				.text{
+					font-size: 20px * 0.67;
+				}
+			}
+		}
+
+		.topElement{
+			left: 14px * 0.67;
+			width: 296px * 0.67;
+			height: 100px * 0.67;
+			top: -50px * 0.67;
+			padding: 0 24px * 0.67;
+		}
   }
 }
