--- a/src/components/Pages/MainPage/FirstSlide/FrameContent/FrameContent.module.scss
+++ b/src/components/Pages/MainPage/FirstSlide/FrameContent/FrameContent.module.scss
@@ -1,3 +1,20 @@
+.topElement{
+  position: absolute;
+  left: 50%;
+  // top: -50%;
+  top: 52px;
+  transform: translateX(-50%);
+  width: 341px;
+  height: 114px;
+  background-color: #FFFFF0;
+  border-radius: 100px;
+  border: 2px solid #FFFFF0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
 .frameContainer {
   display: flex;
   position: relative;
@@ -6,21 +23,7 @@
   border-radius: 100px;
   box-sizing: border-box;
 
-  .topElement{
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 341px;
-    height: 114px;
-    background-color: #FFFFF0;
-    border-radius: 100px;
-    border: 2px solid #FFFFF0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10;
-  }
-
+  
   .bottomElement {
     position: absolute;
     left: 50%;
@@ -36,10 +39,6 @@
     overflow: hidden;
   }
 
-  .topElement {
-    top: -57px;
-  }
-
   .bottomElement {
     bottom: -39px;
   }
@@ -52,16 +51,17 @@
 
 /* Laptop adaptations */
 @media (max-width: 1366px) and (max-height: 820px) {
+  .topElement {
+    width: 341px * 0.67;
+    height: 114px * 0.67;
+    top: -52px * 0.67;
+  }
+
   .frameContainer {
     border-width: 3px;
     border-radius: 67px;
 
-    .topElement {
-      width: 341px * 0.67;
-      height: 114px * 0.67;
-      top: -57px * 0.67;
-    }
-
+    
     .bottomElement {
       width: 260px;
       height: 68px;
