--- a/src/components/Common/NavigationMenu/NavigationMenu.module.scss
+++ b/src/components/Common/NavigationMenu/NavigationMenu.module.scss
@@ -1,11 +1,12 @@
 .navigationMenuClosedWrapper{
 	display: flex;
 	position: fixed;
-	z-index: 100;
+	z-index: 9;
 	top: 65px;
 	left: 50%;
 	transform: translateX(-50%);
-	cursor: pointer;
+	pointer-events: none;
+	cursor: default;
 }
 
 @media (max-width: 1366px) and (max-height: 820px) {
