--- a/src/components/Common/NavigationMenu/NavigationModal/NavigationModal.module.scss
+++ b/src/components/Common/NavigationMenu/NavigationModal/NavigationModal.module.scss
@@ -1,23 +1,88 @@
 .navigationModalWrapper{
 	display: flex;
 	position: fixed;
-	top: 115px;
+	top: 66px;
 	left: 50%;
 	transform: translateX(-50%);
 	width: 336px;
 	height: 456px;
-	border: 4px solid #FFFFF0;
-  border-radius: 40px;
-	padding: 16px 0;
 	gap: 10px;
+
+  .topContentWrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+
+    .topElement{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: absolute;
+      transform-origin: center;
+      width: 296px;
+      height: 100px;
+      background-color: #FFFFF0;
+      border-radius: 100px;
+      box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+      z-index: 10;
+      padding: 0 24px;
+      cursor: pointer;
+      overflow: hidden;
+
+      .logoImageWrapper{
+        display: flex;
+        min-width: 66px;
+        min-height: 66px;
+      
+        .logoImage {
+          width: 100%;
+          height: 100%;
+        }
+        
+      }
+      
+      .logoTextWrapper{
+        display: flex;
+        width: 170px;
+        height: auto;
+        
+        .logoText { 
+          width: 100%;
+          height: auto;
+        }
+      }
+      
+      .logoArrowWrapper{
+        display: flex;
+        position: absolute;
+        width: 41px;
+        left: 111px;
+        height: auto;
+        
+        .logoArrow { 
+          width: 100%;
+          height: auto;
+        }
+      }
+    }
+  }
 
 	.content{
 		display: flex;
 		flex-direction: column;
+    overflow: hidden;
 		width: 100%;
 		height: 100%;
-		padding: 16px 0;
+		padding: 16px 0 ;
 		gap: 10px;
+    border: 4px solid #FFFFF0;
+    border-radius: 40px;
+    pointer-events: none;
+    background-color: rgba(26, 35, 68, 0.75);
+    backdrop-filter: blur(10px);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
 
 		.modalRow{
 			display: flex;
@@ -25,6 +90,7 @@
 			justify-content: center;
 			width: 100%;
 			height: 63px;
+      min-height: 63px;
 
 			.text{
 				color: #FFFFF0;
@@ -33,58 +99,58 @@
 				text-align: center;
 				font-size: 20px;
 				cursor: pointer;
+        pointer-events: auto;
 			}
 		}
 	}
-
-	.topElement{
-    position: absolute;
-    left: 14px;
-		top: -50px;
-    width: 296px;
-    height: 100px;
-    background-color: #FFFFF0;
-    border-radius: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10;
-		padding: 0 24px;
-
-		.logoImage {
-			width: 100%;
-			height: auto;
-		}
-  }
 	
 }
 
 @media (max-width: 1366px) and (max-height: 820px) {
-  .navigationModalWrapper {
-    top: 115px * 0.67;
-		width: 336px * 0.67;
-		height: 456px * 0.67;
-		border-radius: 40px * 0.67;
-
-		.content{
-			padding: 16px * 0.67 0;
-			gap: 10px * 0.67;
-
-			.modalRow{
-				height: 63px * 0.67;
-				
-				.text{
-					font-size: 20px * 0.67;
-				}
-			}
-		}
-
-		.topElement{
-			left: 14px * 0.67;
-			width: 296px * 0.67;
-			height: 100px * 0.67;
-			top: -50px * 0.67;
-			padding: 0 24px * 0.67;
-		}
+  .navigationModalWrapper{
+    top: 66px * 0.67;
+    width: 336px * 0.67;
+    height: 456px * 0.67;
+    gap: 10px * 0.67;
+  
+    .topContentWrapper{
+  
+      .topElement{
+        width: 296px * 0.67;
+        height: 100px * 0.67;
+        border-radius: 100px * 0.67;
+        box-shadow: 0px 0px 4px * 0.67 0px rgba(0, 0, 0, 0.25);
+        padding: 0 24px * 0.67;
+  
+        .logoImageWrapper{
+          min-width: 66px * 0.67;
+          min-height: 66px * 0.67;
+          
+        }
+        
+        .logoTextWrapper{
+          width: 170px * 0.67;
+        }
+        
+        .logoArrowWrapper{
+          width: 41px * 0.67;
+          left: 111px * 0.67;
+        }
+      }
+    }
+  
+    .content{
+      padding: 16px * 0.67 0 ;
+      gap: 10px * 0.67;
+      border: 4px * 0.67 solid #FFFFF0;
+      border-radius: 40px * 0.67;
+  
+      .modalRow{
+        height: 63px * 0.67;
+        min-height: 63px * 0.67;
+  
+      }
+    }
+    
   }
 }
