--- a/src/components/Pages/MainPage/AboutUsSlide/AboutUsSlide.module.scss
+++ b/src/components/Pages/MainPage/AboutUsSlide/AboutUsSlide.module.scss
@@ -27,7 +27,7 @@
     position: relative;
     width: 772px;
     height: 856px;
-    border-radius: 60px;
+    // border-radius: 60px;
     background-color: #fffff0;
       
     .image {
@@ -60,7 +60,7 @@
     .imageBlock{
       width: 517px;
       height: 573px;
-      border-radius: 40px;
+      // border-radius: 40px;
 
       .image{
         transform: scale(0.67);
