need fix position

--- a/src/components/Pages/MainPage/AboutUsSlide/AboutUsSlide.module.scss
+++ b/src/components/Pages/MainPage/AboutUsSlide/AboutUsSlide.module.scss
@@ -28,7 +28,7 @@
     width: 772px;
     height: 856px;
     // border-radius: 60px;
-    background-color: #fffff0;
+    background-color: transparent;
       
     .image {
       object-fit: cover;
