--- a/src/components/Pages/MainPage/AboutUsSlide/Gallery/Gallery.module.scss
+++ b/src/components/Pages/MainPage/AboutUsSlide/Gallery/Gallery.module.scss
@@ -1,10 +1,10 @@
 .gallery {
-  width: 772px; /* Общая ширина */
-  height: 856px; /* Общая высота */
+  width: 772px;
+  height: 856px;
   padding: 0;
   margin: 0;
   overflow: hidden;
-  position: relative; /* Важно для абсолютного позиционирования */
+  position: relative;
   background-color: transparent;
 }
 
@@ -23,4 +23,26 @@
 
 .image {
   border-radius: 10px;
+}
+
+@media (max-width: 1366px) and (max-height: 820px) {
+  .gallery {
+    width: 772px * 0.67;
+    height: 856px * 0.67;
+  }
+  
+  .galleryItem {
+    border-radius: 40px  * 0.67;
+    box-shadow: 0 0 5px * 0.67 rgba(0, 0, 0, 0.2); 
+  }
+  
+  .galleryItem:hover {
+    z-index: 2 * 0.67;
+    border-radius: 60px * 0.67;
+    box-shadow: 0 0 10px * 0.67 rgba(0, 0, 0, 0.5);
+  }
+  
+  .image {
+    border-radius: 10px * 0.67;
+  }
 }
