--- a/src/components/Pages/MainPage/AboutUsSlide/AboutUsSlide.module.scss
+++ b/src/components/Pages/MainPage/AboutUsSlide/AboutUsSlide.module.scss
@@ -6,6 +6,7 @@
 
   .textInfoBlock{
     display: flex;
+    overflow: hidden;
     flex-direction: column;
     width: 772px;
     padding: 60px 32px;
@@ -18,6 +19,7 @@
       flex-direction: column;
       justify-content: flex-start;
       min-height: 166px;
+      gap: 35px;
     }
   }
 
@@ -42,6 +44,7 @@
   
       .contentRow{
         min-height: 166px * 0.67;
+        gap: 35px * 0.67;
       }
     }
   
