--- a/src/components/Pages/MainPage/YouWillFindSlide/YouWillFindInfoTitle/YouWillFindInfoTitle.module.scss
+++ b/src/components/Pages/MainPage/YouWillFindSlide/YouWillFindInfoTitle/YouWillFindInfoTitle.module.scss
@@ -59,6 +59,53 @@
   }
 }
 
+.subWrapper{
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 1247px;
+  
+}
+
+.subArrowBlock{
+  position: relative;
+
+  .subArrowContainer {
+    position: absolute;
+    width: 78px;
+    height: 99px; 
+    transform: rotate(-90deg);
+    display: inline-block;
+    background-color: #a8dadc;
+    -webkit-mask-image: url('../../../../../../assets/svg/arrow.svg');
+    mask-image: url('../../../../../../assets/svg/arrow.svg');
+    mask-repeat: no-repeat;
+    mask-size: contain;
+    mask-position: center;
+  }
+
+}
+
+.newArrowBlock{
+  position: relative;
+  margin-left: 1247px;
+
+  .subArrowContainer {
+    position: absolute;
+    width: 78px;
+    height: 99px; 
+    display: inline-block;
+    background-color: #a8dadc;
+    -webkit-mask-image: url('../../../../../../assets/svg/arrow.svg');
+    mask-image: url('../../../../../../assets/svg/arrow.svg');
+    mask-repeat: no-repeat;
+    mask-size: contain;
+    mask-position: center;
+  }
+
+}
+
 @media (max-width: 1366px) and (max-height: 820px) {
   .youWillFindInfoWrapper{
     height: 126px * 0.67;
@@ -87,6 +134,27 @@
         height: 99px * 0.67; 
       }
   
+    }
+  }
+
+  .subWrapper{
+    width: 1247px * 0.67;
+  }
+
+  .subArrowBlock{
+  
+    .subArrowContainer {
+      width: 78px * 0.67;
+      height: 99px * 0.67; 
+    }
+  }
+
+  .newArrowBlock{
+    margin-left: 1137px * 0.67;
+  
+    .subArrowContainer {
+      width: 78px * 0.67;
+      height: 99px * 0.67; 
     }
   }
 }
