--- a/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/ElseOffersItem.module.scss
+++ b/src/components/Pages/MainPage/OurOffersSlide/ElseOffersItem/ElseOffersItem.module.scss
@@ -1,8 +1,8 @@
-.youWillFindInfoWrapper{
+.youWillFindInfoWrapper {
 	display: flex;
 	flex-direction: column;
 	
-	.titleWrapper{
+	.titleWrapper {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
@@ -11,81 +11,27 @@
 		border-bottom: 3px solid #A8DADC;
 		box-sizing: border-box;
 		cursor: pointer;
-	
-		.textBlock{
-			display: flex;
-			flex-direction: column;
-			justify-content: space-between;
-			height: 100%;
-	
-			.allSubtitles{
-				display: flex;
-				flex-direction: row;
-				padding-left: 3px;
-				width: 100%;
-				font-family: var(--montserrat), sans-serif;
-				font-weight: normal;
-				font-size: 22px;
-				color: #fffff0;
-				line-height: 1;
-		
-			}
-		
-			.title{
-				display: flex;
-				min-height: 96px;
-				align-items: center;
-				font-family: var(--tactic-sans-medium), sans-serif;
-				font-weight: 500;
-				font-size: 40px;
-				color: #A8DADC;
-			}
-		}
-	
-		.arrowBlock{
+
+		.arrowWrapper {
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			height: 100%;
-			
-			.arrowContainer {
-				width: 78px;
-				height: 65px; 
-				display: inline-block;
-				background-color: #a8dadc;
-				-webkit-mask-image: url('../../../../../../assets/svg/arrow.svg');
-				mask-image: url('../../../../../../assets/svg/arrow.svg');
-				mask-repeat: no-repeat;
-				mask-size: contain;
-				mask-position: center;
-			}
+			width: 90px;
+			height: 96px;
+			overflow: hidden;
 		}
 	}
 }
 
 @media (max-width: 1366px) and (max-height: 820px) {
-	.youWillFindInfoWrapper{
-		.titleWrapper{
+	.youWillFindInfoWrapper {
+		.titleWrapper {
 			width: 613px * 0.67;
 			height: 126px * 0.67;
-		
-			.textBlock{
-				.allSubtitles{
-					padding-left: 3px * 0.67;
-					font-size: 22px * 0.67;
-				}
-			
-				.title{
-					min-height: 96px * 0.67;
-					font-size: 40px * 0.67;
-				}
-			}
-		
-			.arrowBlock{
-				.arrowContainer {
-					width: 78px * 0.67;
-					height: 65px * 0.67; 
-				}
+
+			.arrowWrapper {
+				width: 90px * 0.67;
+				height: 96px * 0.67;
 			}
 		}
 	}
