--- a/src/components/Common/ContactFormModal/ContactFormModal.module.scss
+++ b/src/components/Common/ContactFormModal/ContactFormModal.module.scss
@@ -119,7 +119,15 @@
         font-size: 16px;
         color: #D91722;
         text-align: center;
-        // margin: 8px 0 0 0;
+      }
+
+      .successText {
+        font-family: var(--tactic-sans-bold), sans-serif;
+        font-size: 16px;
+        font-weight: 700;
+        color: rgb(168, 218, 220);
+        text-align: center;
+        text-transform: uppercase;
       }
     }
   }
@@ -182,6 +190,9 @@
         }
 
         .errorText {
+          font-size: 16px * 0.67;
+        }
+        .successText {
           font-size: 16px * 0.67;
         }
       }
